# code-sparkle

./: LICENSE  README.md  pyproject.toml
code_sparkle/: __init__.py  achievements.py  badges.py  cli.py  storage.py  streaks.py  tracker.py  xp.py
