[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-sparkle"
version = "1.0.0"
description = "Gamify your coding workflow: achievements, streaks, XP, and badges from git activity."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Code Sparkle Contributors"}]
keywords = ["gamification", "git", "achievements", "streaks", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0",
]

[project.scripts]
code-sparkle = "code_sparkle.cli:cli"

[project.urls]
Homepage = "https://github.com/code-sparkle/code-sparkle"
Issues = "https://github.com/code-sparkle/code-sparkle/issues"
